--- a/service/pom.xml
+++ b/service/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>service-util</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 
