--- a/service/service-product/pom.xml
+++ b/service/service-product/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-product</artifactId>
+    <dependencies>
 
+        <dependency>
+            <groupId>net.oschina.zcx7878</groupId>
+            <artifactId>fastdfs-client-java</artifactId>
+        </dependency>
+
+
+    </dependencies>
 
 </project>
