--- a/service/service-product/src/main/resources/application.properties
+++ b/service/service-product/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=root
 # mybatis
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.mapper-locations=classpath:mapper/*Mapper.xml
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
