ccc --- Web-item里面的ItemController 通过 Service-feign-client     调用Service-item 的 ItemApiController 成功

--- a/service/service-product/src/main/resources/application.properties
+++ b/service/service-product/src/main/resources/application.properties
@@ -12,3 +12,6 @@ mybatis-plus.mapper-locations=classpath:mapper/*Mapper.xml
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+#nacos
+spring.cloud.nacos.discovery.server-addr=192.168.200.128:8848
