--- a/web/web-all/src/main/resources/application.properties
+++ b/web/web-all/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.cloud.nacos.discovery.server-addr=192.168.200.128:8848
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
+#feign³¬Ê±
+feign.client.config.default.read-timeout=60000
+feign.client.config.default.connect-timeout=60000
+
