--- a/service-client/service-product-client/pom.xml
+++ b/service-client/service-product-client/pom.xml
@@ -3,31 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>gmall-parent-0316</artifactId>
+        <artifactId>service-client</artifactId>
         <groupId>com.atguigu.gmall</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-client</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>service-item-client</module>
-        <module>service-product-client</module>
-    </modules>
+    <artifactId>service-product-client</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.atguigu.gmall</groupId>
-            <artifactId>common-util</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.atguigu.gmall</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>service-item-client</artifactId>
             <version>1.0</version>
         </dependency>
     </dependencies>
+
 
 </project>
