--- a/service/service-product/src/main/resources/application.properties
+++ b/service/service-product/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.servlet.multipart.max-request-size=100MB
 
 #nacos
 spring.cloud.nacos.discovery.server-addr=192.168.200.128:8848
+
+#工程名 被nacos发现
+spring.application.name=service-product
+
+#feign超时
+feign.client.config.default.read-timeout=60000
+feign.client.config.default.connect-timeout=60000
