--- a/service/service-item/src/main/resources/application.properties
+++ b/service/service-item/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.cloud.nacos.discovery.server-addr=192.168.200.128:8848
 #feign³¬Ê±
 feign.client.config.default.read-timeout=60000
 feign.client.config.default.connect-timeout=60000
+
+#redis
+spring.redis.host=192.168.200.128
+spring.redis.port=6379
+spring.redis.database=0
+
