--- a/service/service-product/src/main/resources/application.properties
+++ b/service/service-product/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.application.name=service-product
 #feign³¬Ê±
 feign.client.config.default.read-timeout=60000
 feign.client.config.default.connect-timeout=60000
+
+spring.redis.host=192.168.200.128
+spring.redis.port=6379
+spring.redis.database=0
