ccc --- 商品检索页面， 首页的分类数据 完成

--- a/web/web-all/pom.xml
+++ b/web/web-all/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>service-item-client</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>service-product-client</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
