ccc --- 商品检索，商品的上架下架同步到es,热点数据的解决

--- a/service/service-list/pom.xml
+++ b/service/service-list/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>service-product-client</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
 
