--- a/service/service-list/src/main/resources/application.properties
+++ b/service/service-list/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.application.name=service-list
 #
 spring.elasticsearch.rest.uris=http://192.168.200.128:9200
 
+#feign³¬Ê±
+feign.client.config.default.read-timeout=60000
+feign.client.config.default.connect-timeout=60000
+
 #redis
 spring.redis.host=192.168.200.128
 spring.redis.port=6379
