ccc --- 网关和单点登录 基本跑通

--- a/server-gateway/src/main/resources/application.properties
+++ b/server-gateway/src/main/resources/application.properties
@@ -61,3 +61,6 @@ spring.cloud.gateway.routes[14].id=web-activity
 spring.cloud.gateway.routes[14].uri=lb://web-all
 spring.cloud.gateway.routes[14].predicates[0]=Host=activity.gmall.com
 authUrls.url=trade.html,myOrder.html
+#feign³¬Ê±
+feign.client.config.default.read-timeout=60000
+feign.client.config.default.connect-timeout=60000
