--- a/service/service-cart/pom.xml
+++ b/service/service-cart/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>service-cart</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>service-product-client</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
