--- a/service/service-order/pom.xml
+++ b/service/service-order/pom.xml
@@ -3,34 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>gmall-parent-0316</artifactId>
+        <artifactId>service</artifactId>
         <groupId>com.atguigu.gmall</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>service-product</module>
-        <module>service-item</module>
-        <module>service-test</module>
-        <module>service-list</module>
-        <module>service-user</module>
-        <module>service-cart</module>
-        <module>service-order</module>
-    </modules>
+    <artifactId>service-order</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.atguigu.gmall</groupId>
-            <artifactId>service-util</artifactId>
+            <artifactId>service-cart-client</artifactId>
             <version>1.0</version>
         </dependency>
-
         <dependency>
             <groupId>com.atguigu.gmall</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>service-product-client</artifactId>
             <version>1.0</version>
         </dependency>
     </dependencies>
