--- a/web/web-all/pom.xml
+++ b/web/web-all/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>service-user-client</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>service-order-client</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
